--- a/views/supplierVendorAuction.ejs
+++ b/views/supplierVendorAuction.ejs
@@ -525,6 +525,9 @@
                         
                         <button type="submit" class="submit-btn" id="submit-btn">🚀 Place Bid</button>
                     </form>
+                    <div style="margin-top: 10px; color: #e67e22; font-size: 0.95em;">
+                        <em>⚠️ Please refresh to see the latest bids.</em>
+                    </div>
                 </div>
             </div>
             
