--- a/views/supplier.ejs
+++ b/views/supplier.ejs
@@ -107,7 +107,7 @@
         }
         
         .dashboard-container {
-            max-width: 700px;
+            width:80vw;
             margin: 40px auto;
             background: #fff;
             border-radius: 12px;
@@ -314,7 +314,9 @@
             }
             
             .logout-btn {
-                padding: 7px 12px;
+                top: -60%;
+                right:-5%;
+                padding: 4px 8px;
                 font-size: 0.95rem;
             }
             
